testsuite/tests/hidden_includes/hidden_stays_hidden.ocamlc.reference
<<<<<<< HEAD
File "libc/c4.ml", line 2, characters 8-11:
2 | let y = A.x + 1
            ^^^
Error: Unbound module A
||||||| 121bedcfd2
=======
File "libc/c4.ml", line 2, characters 8-11:
2 | let y = A.x + 1
            ^^^
Error: Unbound module "A"
>>>>>>> 5.2.0
